...
        if (state.settings.deviceMode == DeviceMode.BLE) {
            SettingsRow(
                Icons.Outlined.Bluetooth,
                stringResource(R.string.settings_pair_socks),
                stringResource(R.string.settings_pair_socks_value),
                onClick = actions.openPairing,
                testTag = "settings_pair",
            )
        }
        SettingsRow(
            Icons.Outlined.Code,
            stringResource(R.string.settings_device_mode),
            stringResource(
...
